implementação do card de notas iniciada

--- a/index.html
+++ b/index.html
@@ -51,6 +51,25 @@
                             </div>
                     </div>
                 </form>
+
+                <!-- Note Cards Area -->
+                <div class="note-cards-area">
+
+                    <div class="note-card">
+                        <div class="card-header">
+                            What is Lorem Ipsum?
+                        </div>
+                        <div class="card-body">
+                            Lorem Ipsum is simply dummy  text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn-favorite"></button>
+                            <button class="btn-menu"></button>
+                        </div>
+                    </div>
+                    
+                    
+                </div>
             </div>
         </section>
 
