menu de edição de anotações melhorado

--- a/index.html
+++ b/index.html
@@ -57,18 +57,20 @@
 
                     <div class="note-card">
                         <div class="card-header">
-                            What is Lorem Ipsum?
+                            What is Lorem Ipsum? 
+                            <button class="btn-favorite"></button>
                         </div>
                         <div class="card-body">
                             Lorem Ipsum is simply dummy  text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                         </div>
                         <div class="card-footer">
-                            <button class="btn-favorite"></button>
-                            <button class="btn-menu"></button>
+                            <div class="menu-collapse" id="menu01">
+                                <button type="button" class="btn-remove"></button>
+                                <button type="button" class="btn-edit"></button>
+                            </div>
+                            <button type="button" class="menu-control btn-menu" data-target="#menu01"></button>
                         </div>
                     </div>
-                    
-                    
                 </div>
             </div>
         </section>
