--- a/src/style-guide.html
+++ b/src/style-guide.html
@@ -36,10 +36,38 @@
             <button class="btn-outline-light btn-menu"></button>
             <button class="btn-primary btn-edit"></button>
             <button class="btn-danger btn-remove"></button>
-            <br><br>
+        </section>
+        <br>
+        <!-- Labels -->
+        <section>
+            <h1>Labels</h1>
+            <br>
             <label class="label-success" data-toggle="toggle">#Laravel<input type="checkbox"></label>
             <label class="label-primary --active" data-toggle="toggle">#PHP<input type="checkbox"></label>
             <label class="label-danger" data-toggle="toggle">#React.js<input type="checkbox"></label>
+        </section>
+        <br>
+         <!-- Inputs -->
+         <section>
+            <h1>Inputs</h1>
+            <br>
+            <input type="text" class="form-input form-input-primary">
+            <input type="text" class="form-input form-input-success">
+            <input type="text" class="form-input form-input-danger">
+            <input type="text" class="form-input form-input-warning">
+            <input type="text" class="form-input form-input-secondary">
+            <br><br>
+            <input type="text" class="form-input --focus form-input-primary">
+            <input type="text" class="form-input --focus form-input-success">
+            <input type="text" class="form-input --focus form-input-danger">
+            <input type="text" class="form-input --focus form-input-warning">
+            <input type="text" class="form-input --focus form-input-secondary">
+            <br><br>
+            <input type="text" class="form-input-lg form-input-primary">
+            <input type="text" class="form-input-lg form-input-success">
+            <input type="text" class="form-input-lg form-input-danger">
+            <input type="text" class="form-input-lg form-input-warning">
+            <input type="text" class="form-input-lg form-input-secondary">
         </section>
         <br>
         <!-- Cards -->
@@ -76,7 +104,7 @@
                         <li class="tree-item"> Sub-item 01</li>
                         <li class="tree-item"> Sub-item 02</li>
                         <li class="tree-item"> Sub-item 03</li>
-                        <li class="tree-branch target-tree-02" data-toggle="toggle" data-target=".target-tree-02"> Item 01</li>
+                        <li class="tree-branch target-tree-02" data-toggle="toggle" data-target=".target-tree-02"><a href="#"> Item 01</a></li>
                         <ul class="tree target-tree-02">
                             <li class="tree-item"> <a href="#">Sub-item 01</a></li>
                             <li class="tree-item"> <a href="#">Sub-item 01</a></li>
@@ -89,6 +117,7 @@
                 </ul>
             </nav>
         </section>
+        <br>
     </div>
 
     <!-- JQuery -->
