adicionado primeiro modelo da etapa de realizar anotações

--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,22 @@
             </div>
         </aside>
         <main class="grid-content">
-            content
+           <div class="content-header">
+                <h1>Título</h1>
+                <!-- <div class="content-description">
+                    <p>Lorem dd is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's</p>
+                </div> -->
+                <br>
+                <div class="content-info">
+                    <h4 class="info-category"> Livros</h4>&nbsp;&nbsp;
+                    <h4 class="info-updated-at"> Modificado a 2h atrás</h4>
+                </div>
+           </div>
+           <br>
+           <div class="content-body">
+                <textarea id="content"></textarea>
+           </div>
         </main>
         <aside class="grid-aside-two">
             <div class="categories-area">
